--- a/game-backend/score-service/package.json
+++ b/game-backend/score-service/package.json
@@ -15,14 +15,19 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "joi": "^17.13.3",
     "mongoose": "^8.13.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/joi": "^17.2.2",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.14.0",
+    "@types/swagger-ui-express": "^4.1.8",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.2"
   }
