--- a/game-backend/score-service/package.json
+++ b/game-backend/score-service/package.json
@@ -18,6 +18,7 @@
     "joi": "^17.13.3",
     "mongoose": "^8.13.1",
     "morgan": "^1.10.0",
+    "redis": "^4.7.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
@@ -27,6 +28,7 @@
     "@types/joi": "^17.2.2",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.14.0",
+    "@types/redis": "^4.0.10",
     "@types/swagger-ui-express": "^4.1.8",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.2"
