--- a/game-backend/leaderboard-service/package.json
+++ b/game-backend/leaderboard-service/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -23,9 +24,13 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/jest": "^29.5.14",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.14.0",
     "@types/swagger-ui-express": "^4.1.8",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.1.4",
+    "ts-jest": "^29.3.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.2"
   }
