--- a/game-backend/log-api-service/package.json
+++ b/game-backend/log-api-service/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "kafka-node": "^5.0.0",
+    "kafkajs": "^2.2.4",
     "morgan": "^1.10.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
