--- a/game-backend/log-retry-worker-service/package.json
+++ b/game-backend/log-retry-worker-service/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "kafkajs": "^2.2.4",
-    "mongoose": "^8.13.1"
+    "mongoose": "^8.13.1",
+    "p-limit": "^6.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
