--- a/game-backend/player-service/package.json
+++ b/game-backend/player-service/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -31,6 +33,7 @@
     "@types/joi": "^17.2.2",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.17",
+    "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "jest": "^29.7.0",
     "jest-mock-extended": "^4.0.0-beta1",
