--- a/game-backend/docker-compose.yml
+++ b/game-backend/docker-compose.yml
@@ -25,6 +25,12 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    healthcheck:
+      test: ["CMD-SHELL", "kafka-topics --bootstrap-server localhost:9092 --list"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 15s
 
   player-service:
     build: ./player-service
@@ -33,10 +39,15 @@ services:
       - "3001:3001"
     environment:
       - PORT=3001
-      - MONGO_URI=<your_mongo_atlas_player_uri>
+      - MONGO_URI=mongodb+srv://orenpartovi:XaWhBfYn8xMTmdXO@cluster0.qgwsi10.mongodb.net/playerdb?retryWrites=true&w=majority&appName=Cluster0
       - LOG_API_URL=http://log-api-service:3004
+      - KAFKA_BROKER=kafka:9092
+      - KAFKA_RETRY_TOPIC=log-retries
     depends_on:
-      - log-api-service
+      kafka:
+        condition: service_healthy
+      log-api-service:
+        condition: service_started
 
   score-service:
     build: ./score-service
@@ -45,12 +56,17 @@ services:
       - "3002:3002"
     environment:
       - PORT=3002
-      - MONGO_URI=<your_mongo_atlas_score_uri>
+      - MONGO_URI=mongodb+srv://orenpartovi:XaWhBfYn8xMTmdXO@cluster0.qgwsi10.mongodb.net/scoredb?retryWrites=true&w=majority&appName=Cluster0
       - REDIS_URL=redis://redis:6379
       - LOG_API_URL=http://log-api-service:3004
+      - KAFKA_BROKER=kafka:9092
     depends_on:
-      - redis
-      - log-api-service
+      kafka:
+        condition: service_healthy
+      redis:
+        condition: service_started
+      log-api-service:
+        condition: service_started
 
   leaderboard-service:
     build: ./leaderboard-service
@@ -59,10 +75,14 @@ services:
       - "3003:3003"
     environment:
       - PORT=3003
-      - MONGO_URI=<your_mongo_atlas_score_uri>
+      - MONGO_URI=mongodb+srv://orenpartovi:XaWhBfYn8xMTmdXO@cluster0.qgwsi10.mongodb.net/scoredb?retryWrites=true&w=majority&appName=Cluster0
       - LOG_API_URL=http://log-api-service:3004
+      - KAFKA_BROKER=kafka:9092
     depends_on:
-      - log-api-service
+      kafka:
+        condition: service_healthy
+      log-api-service:
+        condition: service_started
 
   log-api-service:
     build: ./log-api-service
@@ -72,44 +92,49 @@ services:
     environment:
       - PORT=3004
       - KAFKA_BROKER=kafka:9092
-      - KAFKA_TOPIC=log-events
+      - KAFKA_HIGH_PRIORITY_TOPIC=log-events-high
+      - KAFKA_LOW_PRIORITY_TOPIC=log-events-low
     depends_on:
-      - kafka
+      kafka:
+        condition: service_healthy
 
   log-worker:
     build: ./log-worker-service
     container_name: log-worker
     environment:
-      - MONGO_URI=<your_mongo_atlas_log_uri>
+      - MONGO_URI=mongodb+srv://orenpartovi:XaWhBfYn8xMTmdXO@cluster0.qgwsi10.mongodb.net/logdb?retryWrites=true&w=majority&appName=Cluster0
       - KAFKA_BROKER=kafka:9092
-      - KAFKA_LOG_TOPIC=log-events
+      - KAFKA_LOG_TOPIC=log-events-high
       - KAFKA_RETRY_TOPIC=log-retries
       - KAFKA_CONSUMER_GROUP=log-consumer-group
       - MAX_CONCURRENT_WRITES=5
       - MAX_WRITE_RATE_PER_SECOND=20
     depends_on:
-      - kafka
+      kafka:
+        condition: service_healthy
 
   log-retry-worker:
     build: ./log-retry-worker-service
     container_name: log-retry-worker
     environment:
-      - MONGO_URI=<your_mongo_atlas_log_uri>
+      - MONGO_URI=mongodb+srv://orenpartovi:XaWhBfYn8xMTmdXO@cluster0.qgwsi10.mongodb.net/logdb?retryWrites=true&w=majority&appName=Cluster0
       - KAFKA_BROKER=kafka:9092
       - KAFKA_RETRY_TOPIC=log-retries
-      - KAFKA_DQL_TOPIC=log-dlq
+      - KAFKA_DLQ_TOPIC=log-dlq
       - KAFKA_CONSUMER_GROUP=retry-group
       - MAX_RETRY_ATTEMPTS=3
     depends_on:
-      - kafka
+      kafka:
+        condition: service_healthy
 
   log-dlq-worker:
     build: ./dlq-service
     container_name: log-dlq-worker
     environment:
-      - MONGO_URI=<your_mongo_atlas_log_uri>
+      - MONGO_URI=mongodb+srv://orenpartovi:XaWhBfYn8xMTmdXO@cluster0.qgwsi10.mongodb.net/dlqdb?retryWrites=true&w=majority&appName=Cluster0
       - KAFKA_BROKER=kafka:9092
-      - KAFKA_DQL_TOPIC=log-dlq
+      - KAFKA_DLQ_TOPIC=log-dlq
       - KAFKA_CONSUMER_GROUP=dlq-group
     depends_on:
-      - kafka
+      kafka:
+        condition: service_healthy
