Add Redis-based rate limiting and update log worker configuration
- Integrated Redis for distributed rate limiting in the log retry worker service.
- Updated Docker Compose to include Redis service and its dependencies.
- Enhanced log worker service to utilize Redis for improved concurrency control.
- Added Redis configuration and connection handling in the log worker service.
- Updated environment variables to support Redis connection settings.

--- a/game-backend/docker-compose.yml
+++ b/game-backend/docker-compose.yml
@@ -144,9 +144,12 @@ services:
       - KAFKA_DLQ_TOPIC=log-dlq
       - KAFKA_CONSUMER_GROUP=retry-group
       - MAX_RETRY_ATTEMPTS=3
+      - REDIS_URL=redis://redis:6379
     depends_on:
       kafka:
         condition: service_healthy
+      redis:
+        condition: service_started
 
   log-dlq-worker:
     build: ./dlq-service
