--- a/game-backend/log-retry-worker-service/package.json
+++ b/game-backend/log-retry-worker-service/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.4.7",
     "kafkajs": "^2.2.4",
     "mongoose": "^8.13.1",
-    "p-limit": "^6.2.0"
+    "p-limit": "^6.2.0",
+    "redis": "^4.6.13"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
