Integrate Redis for log batching and enhance log processing
- Added Redis configuration and connection handling to support log batching.
- Implemented RedisBatchService to manage log storage and periodic flushing to Kafka.
- Updated LogController to utilize Redis for log prioritization and batching instead of direct Kafka publishing.
- Enhanced environment variables in Docker Compose for Redis integration.
- Added graceful shutdown handling for Redis connections.

--- a/game-backend/docker-compose.yml
+++ b/game-backend/docker-compose.yml
@@ -94,9 +94,14 @@ services:
       - KAFKA_BROKER=kafka:9092
       - KAFKA_HIGH_PRIORITY_TOPIC=log-events-high
       - KAFKA_LOW_PRIORITY_TOPIC=log-events-low
+      - REDIS_URL=redis://redis:6379
+      - LOG_BATCH_SIZE=50
+      - LOG_BATCH_TIMEOUT_MS=5000
     depends_on:
       kafka:
         condition: service_healthy
+      redis:
+        condition: service_started
 
   high-priority-log-worker:
     build: ./log-worker-service
