--- a/game-backend/log-api-service/package.json
+++ b/game-backend/log-api-service/package.json
@@ -20,6 +20,7 @@
     "kafka-node": "^5.0.0",
     "kafkajs": "^2.2.4",
     "morgan": "^1.10.0",
+    "redis": "^4.6.13",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
