--- a/game-backend/log-api-service/package.json
+++ b/game-backend/log-api-service/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^22.14.0",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
+    "@types/uuid": "^10.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.2"
   }
