Refactor leaderboard service to integrate Redis caching
- Updated Docker Compose to specify Redis and MongoDB dependencies for the leaderboard service.
- Enhanced package.json with Redis and nodemon for improved development and caching capabilities.
- Implemented Redis caching in the leaderboard service to optimize leaderboard retrieval.
- Added new Redis configuration and connection handling, including a subscriber for score updates.
- Introduced cache constants for managing cache keys and configurations.
- Updated environment variables to support Redis integration and improved local development settings.

--- a/game-backend/docker-compose.yml
+++ b/game-backend/docker-compose.yml
@@ -69,20 +69,21 @@ services:
         condition: service_started
 
   leaderboard-service:
-    build: ./leaderboard-service
+    build:
+      context: ./leaderboard-service
+      dockerfile: Dockerfile
     container_name: leaderboard-service
     ports:
       - "3003:3003"
     environment:
       - PORT=3003
-      - MONGO_URI=mongodb+srv://orenpartovi:XaWhBfYn8xMTmdXO@cluster0.qgwsi10.mongodb.net/scoredb?retryWrites=true&w=majority&appName=Cluster0
+      - MONGO_URI=mongodb://mongodb:27017/leaderboard
+      - REDIS_URL=redis://redis:6379
       - LOG_API_URL=http://log-api-service:3004
-      - KAFKA_BROKER=kafka:9092
     depends_on:
-      kafka:
-        condition: service_healthy
-      log-api-service:
-        condition: service_started
+      - mongodb
+      - redis
+      - log-api-service
 
   log-api-service:
     build: ./log-api-service
