--- a/game-backend/leaderboard-service/package.json
+++ b/game-backend/leaderboard-service/package.json
@@ -1,41 +1,32 @@
 {
   "name": "leaderboard-service",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Leaderboard Service for Game Backend",
+  "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "tsc",
     "start": "node dist/index.js",
+    "dev": "nodemon src/index.ts",
+    "build": "tsc",
     "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
-  "description": "",
   "dependencies": {
-    "axios": "^1.8.4",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^5.1.0",
-    "mongoose": "^8.13.1",
-    "morgan": "^1.10.0",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "express": "^4.18.2",
+    "mongoose": "^7.6.3",
+    "redis": "^4.6.13",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
-    "@types/axios": "^0.9.36",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.1",
-    "@types/jest": "^29.5.14",
-    "@types/morgan": "^1.9.9",
-    "@types/node": "^22.14.0",
-    "@types/swagger-jsdoc": "^6.0.4",
-    "@types/swagger-ui-express": "^4.1.8",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.0",
+    "@types/jest": "^29.5.11",
+    "typescript": "^5.3.2",
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
     "jest": "^29.7.0",
-    "mongodb-memory-server": "^10.1.4",
-    "ts-jest": "^29.3.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.2"
+    "ts-jest": "^29.1.1"
   }
 }
