Integrate Redis caching in player service
- Added Redis configuration and connection handling to the player service.
- Implemented caching for player data retrieval and storage using Redis.
- Updated Docker Compose to include Redis service dependencies.
- Enhanced environment variables to support Redis integration.
- Refactored player service methods to utilize caching for improved performance.

--- a/game-backend/docker-compose.yml
+++ b/game-backend/docker-compose.yml
@@ -43,10 +43,13 @@ services:
       - LOG_API_URL=http://log-api-service:3004
       - KAFKA_BROKER=kafka:9092
       - KAFKA_RETRY_TOPIC=log-retries
+      - REDIS_URL=redis://redis:6379
     depends_on:
       kafka:
         condition: service_healthy
       log-api-service:
+        condition: service_started
+      redis:
         condition: service_started
 
   score-service:
