--- a/game-backend/player-service/package.json
+++ b/game-backend/player-service/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.1",
     "morgan": "^1.10.0",
+    "redis": "^4.7.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
