--- a/game-backend/leaderboard-service/package.json
+++ b/game-backend/leaderboard-service/package.json
@@ -17,16 +17,26 @@
     "express": "^4.18.2",
     "mongoose": "^7.6.3",
     "redis": "^4.6.13",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "morgan": "^1.10.0",
+    "cors": "^2.8.5",
+    "swagger-ui-express": "^5.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "axios": "^1.6.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
     "@types/jest": "^29.5.11",
+    "@types/morgan": "^1.9.9",
+    "@types/cors": "^2.8.17",
+    "@types/swagger-ui-express": "^4.1.8",
+    "@types/swagger-jsdoc": "^6.0.4",
     "typescript": "^5.3.2",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.1",
+    "mongodb-memory-server": "^9.1.6"
   }
 }
